Add schema for actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,13 +19,20 @@
         "!act.removeFile mapping",
         "!act.moveFile mapping",
         "!act.log scalar",
+        "!act.checkout mapping",
         "!act.stage mapping",
         "!act.stageAll mapping",
+        "!act.commit mapping",
+        "!act.merge mapping",
+        "!act.fetch mapping",
+        "!act.pull mapping",
+        "!act.addRevision mapping",
         "!act.setRemote mapping",
         "!act.push mapping",
         "!act.pushAll mapping",
         "!act.setUser mapping",
         "!act.loadReference mapping",
+        "!act.loadCheckpoint mapping",
 
         "!dev.act.unstage mapping",
         "!dev.act.unstageAll mapping",
