--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -9,6 +9,7 @@ asset_index:
     main.section-create-and-checkout-branches: "第五章：建立與切換分支－－創建分歧"
     main.section-merge-and-delete-branches: "第六章：合併與刪除分支－－刪減分歧"
     main.section-share-repository: "第七章：多人共享版本歷史"
+    main.section-integrate-repository: "第八章：整合多人提交歷史"
 
   # level names of section one
     main.intro-install.name: "1-1 節：安裝"
@@ -58,7 +59,10 @@ asset_index:
     main.clone-repo.name: "7-2 節：複製倉庫"
     main.push-branch.name: "7-3 節：推送分支"
     main.fetch-branch.name: "7-4 節：抓取分支"
-    main.simple-collaboration.name: "7-5 節：簡單的多人協作模式 "
+    main.simple-collaboration.name: "7-5 節：簡單的多人協作模式"
+
+  # level names of section eight
+    main.diverged-remote.name: "8-1 節：遭遇來自遠端的分歧"
     
 
   ondisk:
@@ -111,3 +115,6 @@ asset_index:
     push-branch: "push-branch.yaml"
     fetch-branch: "fetch-branch.yaml"
     simple-collaboration: "simple-collaboration.yaml"
+
+  # level configs of section eight: integrate repository
+    diverged-remote: "diverged-remote.yaml"
