--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -63,6 +63,7 @@ asset_index:
 
   # level names of section eight
     main.diverged-remote.name: "8-1 節：遭遇來自遠端的分歧"
+    main.merge-remote.name: "8-2 節：合併分歧的遠端"
     
 
   ondisk:
@@ -118,3 +119,4 @@ asset_index:
 
   # level configs of section eight: integrate repository
     diverged-remote: "diverged-remote.yaml"
+    merge-remote: "merge-remote.yaml"
