Add new level merge-conflict

--- a/example/course-resources/fork/archives-index.yaml
+++ b/example/course-resources/fork/archives-index.yaml
@@ -9,3 +9,6 @@ asset_index:
     share-history: share-history.zip
     share-history-remote: share-history-remote.zip
     share-history-another: share-history-another.zip
+    resolve-conflict: resolve-conflict.zip
+    resolve-conflict-another: resolve-conflict-another.zip
+    resolve-conflict-remote: resolve-conflict-remote.zip
