--- a/example/course-resources/fork/level-data/merge-conflict-index.yaml
+++ b/example/course-resources/fork/level-data/merge-conflict-index.yaml
@@ -40,7 +40,7 @@ asset_index:
       請問嘗試${{t/merge}}之後，發生了甚麼事情呢？  
       1. ${{t/merge}}順利的完成了
       2. ${{t/merge}}沒有完成，${{t/merge-commit}}沒有出現  
-      
+
       請使用數字選項(1/2)來回答  
 
     encounter-conflict: |+2
@@ -118,73 +118,73 @@ asset_index:
 
 # repo assets
     file-name: 百貨公司
-    file-file-name: 百貨公司.txt
+    full-file-name: 百貨公司.txt
     file-path-another: resolve-conflict-another/百貨公司.txt
     file-path-this: resolve-conflict/百貨公司.txt
     
     file: |+2
-      20F：
-      19F：
-      18F：
-      17F：
-      16F：
-      15F：
-      14F：
-      13F：
-      12F：
-      11F：
-      10F：
-      09F：
-      08F：
-      07F：
-      06F：
-      05F：
-      04F：
-      03F：
-      02F：
-      01F：
+      20樓：
+      19樓：
+      18樓：
+      17樓：
+      16樓：
+      15樓：
+      14樓：
+      13樓：
+      12樓：
+      11樓：
+      10樓：
+      09樓：
+      08樓：
+      07樓：
+      06樓：
+      05樓：
+      04樓：
+      03樓：
+      02樓：
+      01樓：
     file-local: |+2
-      20F：
-      19F：
-      18F：
-      17F：
-      16F：
-      15F：
-      14F：
-      13F：
-      12F：
-      11F：
-      10F：
-      09F：
-      08F：
-      07F：
-      06F：
-      05F：
-      04F：
-      03F：
-      02F：
-      01F：化妝品、精品
+      20樓：
+      19樓：
+      18樓：
+      17樓：
+      16樓：
+      15樓：
+      14樓：
+      13樓：
+      12樓：
+      11樓：
+      10樓：
+      09樓：
+      08樓：
+      07樓：
+      06樓：
+      05樓：
+      04樓：
+      03樓：
+      02樓：
+      01樓：化妝品、精品
     file-another: |+2
-      20F：
-      19F：
-      18F：
-      17F：
-      16F：
-      15F：
-      14F：
-      13F：
-      12F：
-      11F：
-      10F：
-      09F：
-      08F：
-      07F：
-      06F：
-      05F：
-      04F：
-      03F：
-      02F：
-      01F：游泳池
+      20樓：
+      19樓：
+      18樓：
+      17樓：
+      16樓：
+      15樓：
+      14樓：
+      13樓：
+      12樓：
+      11樓：
+      10樓：
+      09樓：
+      08樓：
+      07樓：
+      06樓：
+      05樓：
+      04樓：
+      03樓：
+      02樓：
+      01樓：游泳池
     commit-message-1: 加入百貨公司
     commit-message-this: 一樓設置化妝品、精品
     commit-message-another: 一樓就是要游泳啦
