--- a/example/course-resources/fork/levels/resolve-conflict.yaml
+++ b/example/course-resources/fork/levels/resolve-conflict.yaml
@@ -57,9 +57,10 @@
       needConfirm: false
     - !dev.needAction 
       actions:
-        - !act.pushAll 
+        - !act.push 
           localSetupName: resolve-conflict
           remoteNickName: origin
+          refspecs: '+refs/heads/master:refs/heads/master'
     - !verifyRepo 
       referenceName: resolve-conflict-push
     
