--- a/example/course-resources/fork/level-data/resolve-conflict-index.yaml
+++ b/example/course-resources/fork/level-data/resolve-conflict-index.yaml
@@ -110,6 +110,20 @@ asset_index:
 
       請按照之前所學，將 `master` ${{t/push}} 到${{t/remote-repo}}  
       完成之後，請按下下面的「執行」按鈕，檢查是否成功  
+
+    summary: |+2
+      .md
+      在這個章節中，我們學習到了${{t/conflict}}發生的成因  
+      也就是當一個檔案有同一個地方被同時修改之後，在${{t/merge}}就會發生${{t/conflict}}  
+
+      進一步的，我們還學習到了如何使用${{t/gui}}內部提供的工具來加以修正  
+      修正完成之後，我們就可以照常透過${{t/commit-s}}${{t/revision}}來完成一度中斷的${{t/merge}}  
+      以及可以繼續${{t/push}}本地變更到${{t/remote-repo}}  
+
+      然而，目前為止我們只看到檔案${{t/conflict}}最簡單可愛的一種形式  
+      在接下來的章節中  
+      我們將繼續學習如何處理各種其它更複雜的${{t/conflict}}  
+      敬請期待~~
       
       
 
