--- a/example/course-resources/fork/levels/resolve-conflict.yaml
+++ b/example/course-resources/fork/levels/resolve-conflict.yaml
@@ -63,4 +63,7 @@
           refspecs: '+refs/heads/master:refs/heads/master'
     - !verifyRepo 
       referenceName: resolve-conflict-push
+
+    - !elaborate 
+      descriptionId: "level-data/resolve-conflict/summary"
     
