Add assets for resolve-multiple-conflicts

--- a/example/course-resources/fork/level-data/resolve-multiple-conflicts-index.yaml
+++ b/example/course-resources/fork/level-data/resolve-multiple-conflicts-index.yaml
@@ -17,11 +17,10 @@ asset_index:
 
       接下來，在學習如何解決${{t/conflict}}之前  
       我們首先需要有${{t/conflict}}  
-      幸運的是，我們可以透過按下下一個步驟中的「執行」按鈕  
-      自動地製造${{t/conflict}}  
 
-      那麼就來做吧  
-      完成之後，再按下更下一個步驟的「執行」，確認有成功執行  
+      幸運的是  
+      我們可以透過按下下一個步驟中的「執行」按鈕，自動地製造${{t/conflict}}  
+      那麼，就讓我們開始操作吧  
 
     multiple-conflicts: |+2
       .md
@@ -33,8 +32,8 @@ asset_index:
       <div class="img-title">圖(一)</div>  
 
       從上圖的紅框圈選範圍內  
-      我們可以觀察到這個檔案的「03樓」、「05樓」、「07樓」、「09樓」等四個樓層都同時被本地和遠端修改  
-      也就是說，同時發生了四個衝突  
+      我們可以觀察到這個檔案的「03樓」、「11樓」、「19樓」等三個樓層都同時被本地和遠端修改  
+      也就是說，同時發生了三個衝突  
       
       但是不用慌張  
       在前一個章節中，我們才學習過可以在每一個衝突點選擇要選用哪一邊的修改  
@@ -46,7 +45,6 @@ asset_index:
       請操作合併工具的介面  
       將每一個發生衝突的地方，都選擇為賣衣服的那一邊  
       全部選擇完畢之後，請按下合併工具介面的「Resolve(${{t/resolve}})」按鈕，把選擇的結果寫入保存  
-
 
       完成之後，請按下這個步驟上的「執行」按鈕，確認操作成功  
     
@@ -63,7 +61,6 @@ asset_index:
       接下來就趁著手感還在，讓我們再練習一次來增加熟練度吧  
 
       請先在下一個步驟中按下「執行」按鈕，自動製造本地和遠端的${{t/conflict}}  
-      完成之後，請在更下一個步驟中按下「執行」按鈕，確認操作成功  
 
     single-conflict: |+2
       .md
@@ -120,7 +117,7 @@ asset_index:
     file-path-this: resolve-conflict/百貨公司.txt
     file-this-1: |+2
       20樓：
-      19樓：
+      19樓：智慧家庭
       18樓：
       17樓：
       16樓：
@@ -128,20 +125,20 @@ asset_index:
       14樓：
       13樓：
       12樓：
-      11樓：
+      11樓：少淑女裝
       10樓：
-      09樓：休閒服飾
+      09樓：
       08樓：
-      07樓：智慧家庭
+      07樓：
       06樓：
-      05樓：少淑女裝
+      05樓：
       04樓：
       03樓：美食天地
       02樓：
       01樓：化妝品、精品
     file-another-1: |+2
       20樓：
-      19樓：
+      19樓：休閒服飾
       18樓：
       17樓：
       16樓：
@@ -149,20 +146,20 @@ asset_index:
       14樓：
       13樓：
       12樓：
-      11樓：
+      11樓：視聽劇場
       10樓：
-      09樓：電子世界
+      09樓：
       08樓：
-      07樓：紳士名服
+      07樓：
       06樓：
-      05樓：視聽劇場
+      05樓：
       04樓：
       03樓：少女潮牌
       02樓：
       01樓：化妝品、精品
     file-resolved-1: |+2
       20樓：
-      19樓：
+      19樓：休閒服飾
       18樓：
       17樓：
       16樓：
@@ -170,41 +167,41 @@ asset_index:
       14樓：
       13樓：
       12樓：
-      11樓：
+      11樓：少淑女裝
       10樓：
-      09樓：休閒服飾
+      09樓：
       08樓：
-      07樓：紳士名服
+      07樓：
       06樓：
-      05樓：少淑女裝
+      05樓：
       04樓：
       03樓：少女潮牌
       02樓：
       01樓：化妝品、精品
     file-this-2: |+2
       20樓：景觀餐廳
-      19樓：
+      19樓：休閒服飾
       18樓：
-      17樓：
+      17樓：視聽劇場
       16樓：
       15樓：寢俱傢飾
       14樓：
       13樓：品味生活
       12樓：
-      11樓：視聽劇場
+      11樓：少淑女裝
       10樓：
-      09樓：休閒服飾
+      09樓：
       08樓：
-      07樓：紳士名服
+      07樓：
       06樓：
-      05樓：少淑女裝
+      05樓：
       04樓：
       03樓：少女潮牌
       02樓：
       01樓：化妝品、精品
     file-another-2: |+2
       20樓：普通餐廳
-      19樓：
+      19樓：休閒服飾
       18樓：
       17樓：
       16樓：
@@ -212,38 +209,38 @@ asset_index:
       14樓：
       13樓：
       12樓：
-      11樓：
+      11樓：少淑女裝
       10樓：
-      09樓：休閒服飾
+      09樓：
       08樓：運動服飾
-      07樓：紳士名服
+      07樓：
       06樓：貴婦精品
-      05樓：少淑女裝
+      05樓：
       04樓：包包飾品
       03樓：少女潮牌
       02樓：婦幼童裝
       01樓：化妝品、精品
     file-resolved-2: |+2
       20樓：景觀餐廳
-      19樓：
+      19樓：休閒服飾
       18樓：
-      17樓：
+      17樓：視聽劇場
       16樓：
       15樓：寢俱傢飾
       14樓：
       13樓：品味生活
       12樓：
-      11樓：視聽劇場
+      11樓：少淑女裝
       10樓：
-      09樓：休閒服飾
+      09樓：
       08樓：運動服飾
-      07樓：紳士名服
+      07樓：
       06樓：貴婦精品
-      05樓：少淑女裝
+      05樓：
       04樓：包包飾品
       03樓：少女潮牌
       02樓：婦幼童裝
       01樓：化妝品、精品
-    commit-message-1: "設置 3, 5, 7, 9"
+    commit-message-1: "設置 3, 11, 19"
     commit-message-2: "設置 2, 4, 6, 8, 20"
-    commit-message-3: "設置 11, 13, 15, 20"
+    commit-message-3: "設置 13, 15, 17, 20"
