--- a/example/resources/course/fork.yaml
+++ b/example/resources/course/fork.yaml
@@ -232,6 +232,10 @@
           id: "fork-main-resolve-multiple-conflicts"
           nameKey: "levels/main.resolve-multiple-conflicts.name"
           configAssetId: "levels/resolve-multiple-conflicts"
+        - !level
+          id: "fork-main-resolve-with-editor"
+          nameKey: "levels/main.resolve-with-editor.name"
+          configAssetId: "levels/resolve-with-editor"
 
 
 
