--- a/example/course-resources/fork/level-data/resolve-with-editor-index.yaml
+++ b/example/course-resources/fork/level-data/resolve-with-editor-index.yaml
@@ -27,7 +27,7 @@ asset_index:
       靠著「直接修改」發生衝突的檔案來${{t/resolve}}  
 
       請從檔案瀏覽器中開啟位於「`#{{resolve-conflict}}`」的「${{level-data/resolve-with-editor/file-name}}」  
-      開啟之後，應該會看到檔案中有一些類似「`<<<<`」、「`====`」還有「`>>>>`」的符號  
+      開啟之後，應該會看到檔案中有一些類似「`<<<<<<<`」、「`=======`」還有「`>>>>>>>`」的符號  
       請問被夾在這些符號之間的，是甚麼樣的內容呢：  
       1. 開頭為「10樓：」的一些文字
       2. 結尾為「：樓10」的一些文字  
@@ -38,14 +38,14 @@ asset_index:
     conflict-markers: |+2
       .md
       從上個步驟的問答中  
-      我們發現到我們的檔案裡面出現一些類似「`<<<<`」、「`====`」還有「`>>>>`」的奇怪符號  
+      我們發現到我們的檔案裡面出現一些類似「`<<<<<<<`」、「`=======`」還有「`>>>>>>>`」的奇怪符號  
       如果我們回去看檔案的修改歷史，會發現這些符號從來沒有存在於修改歷史中  
       這些符號，是 git 用來**標記${{t/conflict}}發生的位置**的  
 
-      簡單地來說，被 `<<<<` 還有 `====` 夾起來的區塊  
-      是來自於被${{t/merge}}的${{t/branch}}的修改  
-      相反地，被 `====` 還有 `>>>>` 夾起來的區塊  
-      則是來自於主動${{t/merge}}的${{t/branch}}的修改  
+      簡單地來說，被 `<<<<<<<` 還有 `=======` 夾起來的區塊  
+      是來自於**主動${{t/merge}}的${{t/branch}}**的修改(通常是我們的)  
+      相反地，被 `=======` 還有 `>>>>>>>` 夾起來的區塊  
+      則是來自於**被${{t/merge}}的${{t/branch}}**的修改(通常是別人的)  
 
       那麼，為什麼之前我們從來都沒有見到過這誰符號呢？  
       非常簡單，因為這些符號被合併工具用來辨認衝突發生的地方之後，就被忽略不顯示了  
@@ -64,7 +64,7 @@ asset_index:
 
     confirm-conflicted-content: |+2
       .md
-      請問被 `<<<<` 和 `====` 夾起來的內容，還有 `====` 和 `>>>>` 夾起來的內容  
+      請問被 `<<<<<<<` 和 `=======` 夾起來的內容，還有 `=======` 和 `>>>>>>>` 夾起來的內容  
       分別是下列何者呢？  
       1. 「10樓：十全十美」和「10樓：衣食無缺」  
       2. 「10樓：巧克力工廠」和「10樓：冰糖葫蘆」  
@@ -82,8 +82,9 @@ asset_index:
       沒有問題！  
       只要直接修改「${{level-data/resolve-with-editor/file-name}}」這個檔案的內容就可以了  
 
-      請將 `<<<<` 、 `====` 以及 `>>>>` 等符號還有裡面的文字都刪除  
-      替換成一行「10樓：甜點王國」  
+      請將 `<<<<<<<` 、 `=======` 以及 `>>>>>>>` 等符號所在的行直接刪除  
+      還有將被他們夾住的文字也都刪除  
+      刪完之後，在原本的位置上替換成一行「10樓：甜點王國」  
       修改完畢，請儲存檔案  
 
       完成之後，請按下這個步驟中的「執行」按鈕，確認修改正確  
