--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -68,6 +68,7 @@ asset_index:
     main.resolve-conflict.name: "8-4 節：在合併工具中解決合併衝突"
     main.resolve-multiple-conflicts.name: "8-5 節：解決多個合併衝突"
     main.resolve-with-editor.name: "8-6 節：使用文字編輯器解決合併衝突"
+    main.resolve-binary.name: "8-7 節：選取他方或我方解決合併衝突"
     
 
   ondisk:
@@ -128,3 +129,4 @@ asset_index:
     resolve-conflict: "resolve-conflict.yaml"
     resolve-multiple-conflicts: "resolve-multiple-conflicts.yaml"
     resolve-with-editor: "resolve-with-editor.yaml"
+    resolve-binary: "resolve-binary.yaml"
