--- a/example/course-resources/fork/t-index.yaml
+++ b/example/course-resources/fork/t-index.yaml
@@ -70,3 +70,9 @@ asset_index:
     conflict-f: "衝突(conflict)"
     conflict: "衝突"
     resolve: "消解"
+    tracking-f: "追蹤(tracking)"
+    tracking: "追蹤"
+    remote-branch-f: "遠端分支(remote-tracking branch)"
+    remote-branch: "遠端分支"
+    tracking-branch-f: "追蹤分支(tracking branch)"
+    tracking-branch: "追蹤分支"
