--- a/example/resources/course/fork.yaml
+++ b/example/resources/course/fork.yaml
@@ -265,6 +265,10 @@
           id: "fork-main-create-remote-branch"
           nameKey: "levels/main.create-remote-branch.name"
           configAssetId: "levels/create-remote-branch"
+        - !level
+          id: "fork-main-delete-remote-branch"
+          nameKey: "levels/main.delete-remote-branch.name"
+          configAssetId: "levels/delete-remote-branch"
 
 
 
