--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -75,6 +75,7 @@ asset_index:
   # level names of section nine
     main.checkout-remote-branch.name: "9-1 節：遠端分支與追蹤分支"
     main.create-remote-branch.name: "9-2 節：建立遠端分支"
+    main.delete-remote-branch.name: "9-3 節：刪除遠端分支"
 
   ondisk:
   # level configs of section one: intro
@@ -140,3 +141,4 @@ asset_index:
   # level configs of section nine: manager remote
     checkout-remote-branch: "checkout-remote-branch.yaml"
     create-remote-branch: "create-remote-branch.yaml"
+    delete-remote-branch: "delete-remote-branch.yaml"
